--- a/src/components/domain/item/panel/selectedItemPanel/ImagePanel.module.css
+++ b/src/components/domain/item/panel/selectedItemPanel/ImagePanel.module.css
@@ -1,5 +1,5 @@
 .image-container {
-    width: 500px;
+    width: 100%;
     height: 300px; 
     display: flex;
     justify-content: center;
