--- a/src/components/domain/item/panel/selectedItemPanel/PropertiesPanel.module.css
+++ b/src/components/domain/item/panel/selectedItemPanel/PropertiesPanel.module.css
@@ -1,3 +1,27 @@
 .properties-panel {
-    overflow-y: scroll;
+    overflow-y: auto;
+    max-height: 400px;
+}
+
+.empty-message {
+    color: var(--warning-color);
+    font-style: italic;
+}
+
+.property {
+    display: flex;
+    gap: 24px;
+}
+
+.property-value {
+    width: 100%;
+    font-weight: 100;
+}
+
+.property-key {
+    font-weight: bold;
+}
+
+.right-aligned {
+    text-align: right;
 }
